--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,10 +7,19 @@ nav.navbar.navbar-default.navbar-static-top {
 .big-padding.text-center.blue-grey.white-text {
   background-color: #37474f; }
 
+.white {
+  background-color: white; }
+
 .white-text {
   color: #ffffff; }
 
 .table {
   background-color: white; }
+
+.floating {
+  position: fixed;
+  bottom: 2em;
+  right: 2em;
+  z-index: 100; }
 
 /*# sourceMappingURL=app.css.map */
