--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,10 +13,21 @@ nav.navbar.navbar-default.navbar-static-top {
     background-color: #37474f;
 }
 
+.white{
+    background-color: white;
+}
+
 .white-text{
     color: #ffffff;
 }
 
 .table{
     background-color: white;
+}
+
+.floating{
+    position: fixed;
+    bottom: 2em;
+    right: 2em;
+    z-index: 100;
 }
