--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -38,3 +38,24 @@ input.btn.btn-link.red-text.no-padding.no-margin {
     padding: 0px;
     margin: 0px;
 }
+
+.card.product.text-left{
+    width: 600px;
+    max-width: 100%;
+    padding: 1em;
+    position: relative;
+    
+    h1{
+        padding-bottom: 10px;
+        border-bottom: solid 1px;
+    }
+    
+    .actions{
+        right: 1em;
+        top: 10px;
+    }
+    
+    .absolute{
+        position: absolute;
+    }
+}
