--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,4 +28,18 @@ input.btn.btn-link.red-text.no-padding.no-margin {
   padding: 0px;
   margin: 0px; }
 
+.card.product.text-left {
+  width: 600px;
+  max-width: 100%;
+  padding: 1em;
+  position: relative; }
+  .card.product.text-left h1 {
+    padding-bottom: 10px;
+    border-bottom: solid 1px; }
+  .card.product.text-left .actions {
+    right: 1em;
+    top: 10px; }
+  .card.product.text-left .absolute {
+    position: absolute; }
+
 /*# sourceMappingURL=app.css.map */
